--- a/喜马拉雅/classes/other/Info.plist
+++ b/喜马拉雅/classes/other/Info.plist
@@ -29,6 +29,7 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
